--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
+    "react-native-svg": "^15.12.0",
     "react-native-video": "^6.14.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
@@ -54,6 +55,7 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-native": "^5.0.0",
     "prettier": "^3.5.3",
+    "react-native-svg-transformer": "^1.5.1",
     "typescript": "~5.8.3"
   },
   "private": true
