--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
-    "react-native-svg": "^15.12.0",
+    "react-native-svg": "15.11.2",
     "react-native-video": "^6.14.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
@@ -48,6 +48,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@expo/metro-config": "^0.20.14",
     "@types/react": "~19.0.10",
     "@types/styled-components-react-native": "^5.2.5",
     "eslint": "^9.25.0",
